--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,9 +11,13 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-        </ul>
+        <a href="{% url 'home' %}">Home</a></li>
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Log Out</a>
+        {% else %}
+            <a href="{% url 'signup' %}">Sign Up</a>
+            <a href="{% url 'login' %}">Log In</a>
+        {% endif %}
     </nav>
     {% block content %}
     {% endblock %}
