--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,10 +12,11 @@
 <body>
     <nav>
         <a href="{% url 'home' %}">Home</a></li>
+        <a href="{% url 'index' %}">Explore Listings</a>
         {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">Log Out</a>
         {% else %}
-            <a href="{% url 'signup' %}">Sign Up</a>
+            <!-- <a href="{% url 'signup' %}">Sign Up</a> -->
             <a href="{% url 'login' %}">Log In</a>
         {% endif %}
     </nav>
