--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -9,5 +9,7 @@
     <input type="hidden" name="next" value="{{ next }}">
     <button type="submit" class="btn">Log In</button>
 </form>
+<a href="{% url 'signup' %}">Sign Up</a>
+
 
 {% endblock %}
