--- a/main_app/templates/listings/index.html
+++ b/main_app/templates/listings/index.html
@@ -2,18 +2,20 @@
 
 {% block content %}
 <div class="section">
-    <h1>Listings</h1>
-    <div class="listing-grid">
-        {% for listing in listings %}
-        <a href="{% url 'detail' listing.id %}">
-            <div class="listing-tile">
-                <img src="{{ listing.main_img }}" alt="">
-                <h2>{{ listing.name }}</h2>
-                <h3><span class="bold">${{ listing.price }}</span> Night</h3>
-            </div>
-        </a>
-        {% endfor %}
-     </div>
+    <div class="container">
+        <h1>Listings</h1>
+        <div class="listing-grid">
+            {% for listing in listings %}
+            <a href="{% url 'detail' listing.id %}">
+                <div class="listing-tile">
+                    <img src="{{ listing.main_img }}" alt="">
+                    <h2>{{ listing.name }}</h2>
+                    <h3><span class="bold">${{ listing.price }}</span> Night</h3>
+                </div>
+            </a>
+            {% endfor %}
+         </div>
+    </div>
 </div>
 
     
