--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,8 +1,9 @@
 body {
+    /* padding: 0 20px 0 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: gray;
+    background-color: #f7f4efff;
     color: black;
     min-height: 100vh;
     width: 100vw;
@@ -11,27 +12,28 @@ body {
 
 .section {
     width: 100%;
+    padding: 0, 30px;
+}
+
+.container {
+    margin: 0 auto;
     max-width: 1400px;
-    padding: 30px 20px;
-    border: solid 1px black;
+    padding: 30px 30px;
+    overflow: hidden;
 }
 
 .listing-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 15px;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    column-gap: 20px;
     row-gap: 30px;
-}
-
-.listing-tile {
-    width: 100%;
 }
 
 .listing-tile img {
     object-fit: cover;
-    height: 250px;
+    height: 300px;
     width: 100%;
-    border-radius: 20px;
+    border-radius: 12px;
 }
 
 
@@ -48,19 +50,21 @@ body {
 .listing-img {
     object-fit: cover;
     height:100%;
-    width: 60%;
+    width: 50%;
 }
 
 .listing-imgs {
-    height: 30vh;
+    width: 100%;
+    height: 50vh;
     display: flex;
+    overflow: hidden;
     column-gap: 10px;
-    border-radius: 20px;
+    border-radius: 12px;
 }
 
 .second-img {
     height: 100%;
-    width: 20%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
