--- a/main_app/templates/listings/index.html
+++ b/main_app/templates/listings/index.html
@@ -10,7 +10,7 @@
                 <div class="listing-tile">
                     <img src="{{ listing.main_img }}" alt="">
                     <h2>{{ listing.name }}</h2>
-                    <h3><span class="bold">${{ listing.price }}</span> Night</h3>
+                    <h3><span class="bold">${{ listing.price }}</span>/night</h3>
                 </div>
             </a>
             {% endfor %}
