Booking feature added

--- a/main_app/templates/listings/detail.html
+++ b/main_app/templates/listings/detail.html
@@ -13,8 +13,8 @@
                 <img src="{{ listing.third_img }}" class="listing-img">
             </div>
             <div class="second-img">
-                <img src="{{ listing.second_img }}" class="listing-img">
-                <img src="{{ listing.third_img }}" class="listing-img">
+                <img src="{{ listing.fourth_img }}" class="listing-img">
+                <img src="{{ listing.fith_img }}" class="listing-img">
             </div>
         </div>
         <ul class="listing-info">
