--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,14 +6,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ArcBnB</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
     <nav>
         <a href="{% url 'home' %}">Home</a></li>
         <a href="{% url 'index' %}">Explore Listings</a>
         {% if user.is_authenticated %}
+            <a href="{% url 'bookings' %}">My Bookings</a>
             <a href="{% url 'logout' %}">Log Out</a>
         {% else %}
             <!-- <a href="{% url 'signup' %}">Sign Up</a> -->
