--- a/main_app/templates/listings/detail.html
+++ b/main_app/templates/listings/detail.html
@@ -37,7 +37,7 @@
 </div>
 
 
-<script>
+<!-- <script>
     const dateEl = document.getElementById('id_checkin');
     M.Datepicker.init(dateEl, {
       format: 'yyyy-mm-dd',
@@ -46,7 +46,7 @@
       autoClose: true
     });
 
-</script>
+</script> -->
 
 
 {% endblock %}
