--- a/main_app/templates/user/bookings.html
+++ b/main_app/templates/user/bookings.html
@@ -7,11 +7,13 @@
         <h1>Booking</h1>
         <div class="listing-grid">
             {% for booking in bookings %}
-            <div class="listing-tile">
-                <img src="{{ booking.listing.main_img }}" alt="">
-                <h2>{{ booking.listing.name }}</h2>
-                <h3><span class="bold">${{ booking.listing.price }}</span>/night</h3>
-            </div>
+            <a href="{% url 'booking_detail' booking.id %}">
+                <div class="listing-tile">
+                    <img src="{{ booking.listing.main_img }}" alt="">
+                    <h2>{{ booking.listing.name }}</h2>
+                    <h3><span class="bold">{{ booking.checkin }} - {{ booking.checkout }}</span></h3>
+                </div>
+            </a>
             {% endfor %}
          </div>
     </div>
