--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,21 +7,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArcBnB</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
-    <nav>
-        <a href="{% url 'home' %}">Home</a></li>
-        <a href="{% url 'index' %}">Explore Listings</a>
-        {% if user.is_authenticated %}
-            <a href="{% url 'bookings' %}">My Bookings</a>
-            <a href="{% url 'logout' %}">Log Out</a>
-        {% else %}
-            <!-- <a href="{% url 'signup' %}">Sign Up</a> -->
-            <a href="{% url 'login' %}">Log In</a>
-        {% endif %}
-    </nav>
+    <div id="bottomborder" class="section">
+        <div class="container">
+            <nav>
+                <div class="left">
+                    <a href="{% url 'home' %}"><img src="{% static 'images/arc.logo.svg' %}" alt=""></a>
+                </div>
+                <div class="right">
+                    <a href="{% url 'index' %}">Explore Listings</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'logout' %}">Log Out</a>
+                        <div class="user">
+                            <img id="hamburger" src="{% static 'images/hbg.svg' %}" alt="">
+                            <img id="profileimg" src="{% static 'images/user.svg' %}" alt="">
+                        </div>
+                        <!-- <a href="{% url 'bookings' %}">My Bookings</a>
+                        <a href="{% url 'logout' %}">Log Out</a> -->
+                    {% else %}
+                        <!-- <a href="{% url 'signup' %}">Sign Up</a> -->
+                        <a href="{% url 'login' %}">Log In</a>
+                    {% endif %}
+                </div>
+
+            </nav>
+        </div>
+    </div>
     {% block content %}
     {% endblock %}
 </body>
