--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 nav {
+    padding: 10px 0;
     height: auto;
     display: flex;
     justify-content: space-between;
@@ -19,51 +20,79 @@ nav {
 }
 
 nav img {
-    height: 45px;
+    height: 35px;
 }
 
 .right {
+    position: relative;
     display: flex;
     align-items: center;
 }
 
-nav a {
-    margin: 0 10px;
+.right a {
+    margin: 0 20px 0 0;
     padding: 10px 15px;
-    font-size: 16px;
+    font-size: 12px;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 600;
     color: black;
     border-radius: 40px;
     transition: 250ms;
 }
 
-nav a:hover {
-    background-color: lightgrey;
+.right a:hover {
+    background-color: #c9c6c3;
 }
 
-.user {
-    padding: 2px 2px 2px 10px;
-    height: 40px;
+#user_menu {
+    padding: 4px 2px 4px 10px;
+    position: relative;
     display: flex;
+    z-index: 45;
     align-items: center;
     border-radius: 40px;
-    border: solid 1px lightgray;
+    border: solid 1px #d9d7d4;
     cursor: pointer;
     transition: 250ms;
 }
 
-.user:hover {
-    box-shadow: 1px 4px 4px lightgrey;
+#user_menu:hover {
+    box-shadow: 0 3px 3px #d9d7d4;
 }
 
 #hamburger {
-    height: 20px;
+    height: 18px;
     margin-right: 10px;
 }
 
 #profileimg {
-    height: 36px;
+    height: 28px;
+}
+
+#dropdown {
+    padding: 10px 0;
+    position: absolute;
+    display: none;
+    overflow: hidden;
+    flex-direction: column;
+    z-index: 1;
+    top: 45px;
+    right: 0;
+    border-radius: 20px;
+    background-color: #f7f4efff;
+    box-shadow: 0 4px 10px 0px rgba(68, 68, 68, 0.2);
+}
+
+#dropdown a {
+    padding: 10px 100px 10px 15px;
+    margin: 0;
+    border-radius: 0;
+}
+
+#logout {
+    margin-top: 20px !important;
+    font-weight: 300;
+    border-top: solid 1px #d9d7d4;
 }
 
 
@@ -73,19 +102,23 @@ nav a:hover {
 }
 
 #bottomborder {
-    padding: 0 0 0 0 !important;
-    border-bottom: solid 1px lightgray;
+    padding: 0px !important;
+    position: sticky;
+    top: 0;
+    background-color: #f7f4efff;
+    border-bottom: solid 1px #d9d7d4;
 }
 
 .container {
     margin: 0 auto;
     max-width: 1400px;
-    padding: 30px 30px;
+    padding: 50px 30px;
     overflow: hidden;
 }
 
-#bottomborder container {
-    padding: 0 0 0 0 !important;
+#bottomborder > .container {
+    padding: 0px !important;
+    overflow: visible;
 }
 .listing-grid {
     display: grid;
