--- a/main_app/templates/listings/filter/index_feature.html
+++ b/main_app/templates/listings/filter/index_feature.html
@@ -5,11 +5,11 @@
     <div class="container">
         <ul>
             {% for feature in features %}
-                <a href="{% url 'index_feature' feature.id %}"><li> {{ feature.name }} </li></a>
+                <li> {{ feature.name }} </li>
             {% endfor %}
         </ul>
         <div class="listing-grid">
-            {% for listing in listings %}    
+            {% for listing in listings %}   
             <a href="{% url 'detail' listing.id %}">
                 <div class="listing-tile">
                     <img src="{{ listing.main_img }}" alt="">
@@ -23,7 +23,4 @@
 </div>
 
     
-
-
-
 {% endblock %}
