README, CSS updates, Feature Nav

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArcBnB</title>
+    <title>arcbnb</title>
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -45,6 +46,10 @@
     </div>
     {% block content %}
     {% endblock %}
+
+    <footer>
+        All Rights Reserved, &copy; 2023 arcbnb &nbsp;</div>
+    </footer>
 
     <script>
         const targetDiv = document.getElementById("dropdown");
