--- a/main_app/templates/listings/filter/index_feature.html
+++ b/main_app/templates/listings/filter/index_feature.html
@@ -1,13 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <div class="section">
     <div class="container">
-        <ul>
+        <div id="filter_list">
             {% for feature in features %}
-                <li> {{ feature.name }} </li>
+                {% if current == feature.id %}
+                <a class="current_tile" href="{% url 'index_feature' feature.id %}"> 
+                    <img id="feature_icon" src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="">
+                    {{ feature.name }} 
+                </a>
+                {% else %}
+                    <a class="feature_tile" href="{% url 'index_feature' feature.id %}"> 
+                        <img id="feature_icon" src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="">
+                        {{ feature.name }} 
+                    </a>
+                {% endif %}
             {% endfor %}
-        </ul>
+        </div>
+    </div>
+</div>
+<div class="section">
+    <div class="container">
+        
+    
         <div class="listing-grid">
             {% for listing in listings %}   
             <a href="{% url 'detail' listing.id %}">
@@ -22,5 +39,9 @@
     </div>
 </div>
 
-    
+<script>
+    const feature = document.getElementsByClassName('feature_tile')
+
+</script>
+
 {% endblock %}
