--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -11,12 +11,31 @@ body {
     
 }
 
+h3 {
+    all: unset;
+    margin: 10px 0 5px;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+h4 {
+    all: unset;
+    font-size: 12px;
+}
+
 nav {
     padding: 10px 0;
     height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #f7f4efff;
+    z-index: 1;
+}
+
+a {
+    all: unset;
+    cursor: pointer;
 }
 
 nav img {
@@ -95,6 +114,55 @@ nav img {
     border-top: solid 1px #d9d7d4;
 }
 
+#filter_list {
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 0;
+}
+
+.feature_tile {
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 11px;
+    color: black;
+    font-weight: 600;
+    text-decoration: none;
+    opacity: 65%;
+    cursor: pointer;
+    transition: opacity 250ms;
+}
+.current_tile {
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 11px;
+    color: black;
+    font-weight: 600;
+    text-decoration: none;
+    opacity: 100%;
+    cursor: pointer;
+    transition: opacity 250ms;
+    margin-bottom: -2px;
+    border-bottom: solid 2px black;
+}
+
+.feature_tile:hover {
+    opacity: 100%;
+    margin-bottom: -2px;
+    border-bottom: solid 2px lightgray;
+}
+
+#feature_icon {
+    height: 30px;
+    width: 30px;
+    margin-bottom: 5px;
+}
+
 
 .section {
     width: 100%;
@@ -107,6 +175,7 @@ nav img {
     top: 0;
     background-color: #f7f4efff;
     border-bottom: solid 1px #d9d7d4;
+    z-index: 1;
 }
 
 .container {
@@ -125,6 +194,18 @@ nav img {
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     column-gap: 20px;
     row-gap: 30px;
+}
+
+.listing-tile {
+    display: flex;
+    flex-direction: column;
+    opacity: 90%;
+    cursor: pointer;
+    transition: 250ms;
+}
+
+.listing-tile:hover {
+    opacity: 100%;
 }
 
 .listing-tile img {
@@ -176,4 +257,16 @@ nav img {
 .listing-info {
     display: flex;
     flex-direction: column;
+}
+
+footer {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0 5px;
+    border-top: solid 1px #d9d7d4;
+    background-color: #f7f4efff;
 }
