--- a/main_app/templates/listings/filter/index_feature.html
+++ b/main_app/templates/listings/filter/index_feature.html
@@ -12,8 +12,8 @@
                     {{ feature.name }} 
                 </a>
                 {% else %}
-                    <a class="feature_tile" href="{% url 'index_feature' feature.id %}"> 
-                        <img id="feature_icon" src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="">
+                    <a class="feature_tile" href="{{% url 'index_feature' feature.id %}}"> 
+                        <img id="feature_icon" src="{{ feature.icon }}" alt="">
                         {{ feature.name }} 
                     </a>
                 {% endif %}
@@ -30,8 +30,8 @@
             <a href="{% url 'detail' listing.id %}">
                 <div class="listing-tile">
                     <img src="{{ listing.main_img }}" alt="">
-                    <h2>{{ listing.name }}</h2>
-                    <h3><span class="bold">${{ listing.price }}</span>/night</h3>
+                    <h3>{{ listing.name }}</h3>
+                    <h4><span class="bold">${{ listing.price }}</span> night</h4>
                 </div>
             </a>
             {% endfor %}
