--- a/main_app/templates/listings/index.html
+++ b/main_app/templates/listings/index.html
@@ -13,7 +13,7 @@
                 </a>
                 {% else %}
                     <a class="feature_tile" href="{% url 'index_feature' feature.id %}"> 
-                        <img id="feature_icon" src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="">
+                        <img id="feature_icon" src="{{ feature.icon }}" alt="">
                         {{ feature.name }} 
                     </a>
                 {% endif %}
