--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,5 +1,4 @@
 body {
-    /* padding: 0 20px 0 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +23,7 @@ h4 {
 }
 
 nav {
+    width: 100%;
     padding: 10px 0;
     height: auto;
     display: flex;
@@ -166,23 +166,29 @@ nav img {
 
 .section {
     width: 100%;
+    max-width: 100vw;
     padding: 0, 30px;
 }
 
 #bottomborder {
     padding: 0px !important;
+    width: 100%;
+    max-width: 100vw;
     position: sticky;
     top: 0;
     background-color: #f7f4efff;
     border-bottom: solid 1px #d9d7d4;
     z-index: 1;
+    /* overflow: hidden; */
 }
 
 .container {
     margin: 0 auto;
+    width: 100%;
     max-width: 1400px;
     padding: 50px 30px;
     overflow: hidden;
+    
 }
 
 #bottomborder > .container {
@@ -260,7 +266,7 @@ nav img {
 }
 
 footer {
-    width: 100%;
+    width: 100vw;
     position: fixed;
     bottom: 0;
     display: flex;
