--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+  }
+
 body {
     display: flex;
     flex-direction: column;
@@ -7,7 +11,13 @@ body {
     color: black;
     min-height: 100vh;
     width: 100vw;
-    
+}
+
+h2 {
+    all: unset;
+    font-size: 22px;
+    font-weight: 700;
+    padding: 0 0 20px 0;
 }
 
 h3 {
@@ -20,6 +30,11 @@ h3 {
 h4 {
     all: unset;
     font-size: 12px;
+}
+
+p {
+    font-size: 18px;
+    font-weight: 200;
 }
 
 nav {
@@ -262,7 +277,116 @@ nav img {
 
 .listing-info {
     display: flex;
-    flex-direction: column;
+    padding-top: 40px;
+
+}
+
+.listing-detail {
+    width: 65%;
+    padding-right: 60px;
+}
+
+.listing-detail > p {
+    margin-top: 40px;
+    padding: 40px 0;
+    border-top: solid 1px #d9d7d4;
+}
+
+.booking-form {
+    width: 35%;
+}
+
+.light {
+    font-weight: 200px !important;
+}
+
+.booking-form > form {
+    border: solid 1px #d9d7d4;
+    padding: 20px 15px;
+    border-radius: 20px;
+    box-shadow: 0 2px 8px rgba(68, 68, 68, 0.2);
+    overflow: hidden;
+}
+
+.btn-div {
+    display: flex;
+    margin-top: 40px; 
+    text-align: center;
+}
+
+.btn {
+    border: none;
+    width: 100%;
+    padding: 15px;
+    border-radius: 12px;
+    background-color: #D92064;
+    color: white;
+    font-size: 18px;
+    margin-right: 15px;
+    text-align: center;
+    transition: 250ms;
+    border: solid 2px #D92064;
+    cursor: pointer;
+}
+
+.btn-2 {
+    border: none;
+    width: 100%;
+    padding: 15px;
+    border-radius: 12px;
+    text-decoration: underline;
+    background-color: transparent;
+    color: #D92064;
+    border: solid 2px transparent;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 250ms;
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: #D92064;
+    border: solid 2px #D92064;
+}
+
+.btn-2:hover {
+    background-color: transparent;
+    color: #D92064;
+    border: solid 2px #D92064;
+    font-size: 18px;
+}
+
+.cancel {
+    margin-top: 10vh;
+}
+
+.accommodation {
+    display: flex;
+}
+
+.accommodation > h4 {
+    font-size: 18px;
+    font-weight: 300;
+    margin: 10px 5px 0 0;
+}
+
+.feature-table {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+    padding: 60px 0;
+    border-top: solid 1px #d9d7d4;
+    border-bottom: solid 1px #d9d7d4;
+}
+
+.feature-table > div {
+    display: flex;
+    align-content: center;
+    gap: 14px;
+}
+
+.feature-table > h2 {
+    grid-column: span 2;
 }
 
 footer {
