--- a/main_app/templates/user/booking_detail.html
+++ b/main_app/templates/user/booking_detail.html
@@ -2,13 +2,9 @@
 
 {% block content %}
 
-<h1>Booking Details</h1>
 <div class="section">
     <div class="container">
-        <h2>{{ booking.listing.name }}</h2>
-        <a href="{% url 'booking_delete' booking.id %}">Cancel</a>
-        <a href="{% url 'booking_update' booking.id %}">Update</a>
-        {{ booking.guests }}
+        <h1>{{ booking.listing.name }}</h1>
         <div class="listing-imgs">
             <img src="{{ booking.listing.main_img }}" class="listing-img">
             <div class="second-img">
@@ -17,21 +13,46 @@
             </div>
             <div class="second-img">
                 <img src="{{ booking.listing.fourth_img }}" class="listing-img">
-                <img src="{{ booking.listing.fith_img }}" class="listing-img">
+                <img src="{{ booking.listing.fifth_img }}" class="listing-img">
             </div>
         </div>
-        <ul class="listing-info">
-            <li>{{ booking.listing.arc_type }}</li>
-            <li>Built in {{ booking.listing.yearbuilt }}</li>
-            <li>{{ booking.listing.guest_num }} Guests</li>
-            <li>{{ booking.listing.bedrooms }} Bedrooms</li>
-            <li>{{ booking.listing.bathrooms }} Bath</li>
-            <li>{{ booking.listing.description }}</li>
-        </ul>
-        
-      
+       <div class="listing-info">
+            <div class="listing-detail">
+                <h2>A {{ booking.listing.arc_type }} Build from {{ booking.listing.yearbuilt }}</h2>
+                <div class="accommodation">
+                    <h4>{{ booking.listing.guest_num }} Guests · </h4>
+                    <h4>{{ booking.listing.bedrooms }} Bedrooms · </h4>
+                    <h4> {{ booking.listing.bathrooms }} Bath</h4>
+                </div>
+                <p>{{ booking.listing.description }}</p>
+                <div class="feature-table">
+                    <h2>This place offers</h2>
+                    {% for feature in booking.listing.features.all %}
+                        <div>
+                            <img id="feature_icon" src="{{ feature.icon }}" alt="">
+                            {{ feature.name }}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="booking-form">
+                <form action="" method="POST">
+                    <h2>Your Booking Details</h2>
+                    <p><strong>Price: </strong>${{ booking.listing.price }} night</p>
+                    <p><strong>Guests: </strong>{{ booking.guests }}</p>
+                    <p><strong>Check-in: </strong>{{ booking.checkin }} </p>
+                    <p><strong>Check-out: </strong>{{ booking.checkout }}</p>
+                    <br>
+                    <a class="btn" href="{% url 'booking_update' booking.id %}">Update Booking</a>
+                    <a class="btn-2" href="{% url 'booking_delete' booking.id %}">Cancel</a>
+                    <br>
+                    <br>
+                </form>
+            </div>           
+        </div>
     </div>
 </div>
+
 
 
 
