--- a/main_app/templates/user/bookings.html
+++ b/main_app/templates/user/bookings.html
@@ -1,17 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Bookings for {{user.username}}</h1>
 <div class="section">
     <div class="container">
-        <h1>Booking</h1>
+        <h1>Your Trips</h1>
         <div class="listing-grid">
             {% for booking in bookings %}
             <a href="{% url 'booking_detail' booking.id %}">
                 <div class="listing-tile">
                     <img src="{{ booking.listing.main_img }}" alt="">
-                    <h2>{{ booking.listing.name }}</h2>
-                    <h3><span class="bold">{{ booking.checkin }} - {{ booking.checkout }}</span></h3>
+                    <h3>{{ booking.listing.name }}</h4>
+                    <h4><span class="bold">{{ booking.checkin }} - {{ booking.checkout }}</span></h4>
                 </div>
             </a>
             {% endfor %}
