home page created

--- a/main_app/templates/listings/filter/index_feature.html
+++ b/main_app/templates/listings/filter/index_feature.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="section">
-    <div class="container">
+    <div id="filter-container" class="container">
         <div id="filter_list">
             {% for feature in features %}
                 {% if current == feature.id %}
