--- a/main_app/templates/listings/index.html
+++ b/main_app/templates/listings/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="section">
-    <div class="container">
+<div id="filter-section" class="section">
+    <div id="filter-container" class="container">
         <div id="filter_list">
             {% for feature in features %}
                 {% if current == feature.id %}
