--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -37,6 +37,48 @@ p {
     font-weight: 200;
 }
 
+.hero {
+    display: flex;
+    justify-items: right;
+}
+
+.hero-header {
+    padding: 10px 30px 20px;
+    margin-top: 5vh;
+    width: 25%;
+    background-color: rgba(247, 244, 239, 0.8);
+    backdrop-filter: blur(3px);
+    position: absolute;
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(68, 68, 68, 0.5);
+}
+
+.hero-header > p {
+    margin-bottom: 40px;
+    margin-top: -15px;
+    font-size: 22px;
+}
+.hero-header > .btn {
+    width: fit-content;
+    display: block;
+    margin-bottom: 15px;
+}
+
+
+.hero-img {
+    margin-left: 25%;
+    height: 40vh;
+    width: 75%;
+    object-fit: cover;
+    background-position: center right;
+    border-radius: 20px;
+    overflow: hidden;
+    background-image: url("../images/hero.jpeg");
+}
+
+
+
+
 nav {
     width: 100%;
     padding: 10px 0;
@@ -182,11 +224,11 @@ nav img {
 .section {
     width: 100%;
     max-width: 100vw;
-    padding: 0, 30px;
+    padding: 0 30px;
 }
 
 #bottomborder {
-    padding: 0px !important;
+    padding: 0px 30px !important;
     width: 100%;
     max-width: 100vw;
     position: sticky;
@@ -203,11 +245,16 @@ nav img {
     max-width: 1400px;
     padding: 50px 30px;
     overflow: hidden;
-    
 }
 
+#filter-container {
+    padding: 10px 30px;
+}
+
+
+
 #bottomborder > .container {
-    padding: 0px !important;
+    padding: 0px 30px !important;
     overflow: visible;
 }
 .listing-grid {
@@ -357,7 +404,22 @@ nav img {
 }
 
 .cancel {
-    margin-top: 10vh;
+    padding: 50px 60px;
+    background-color: #f7f4efff;
+    border-radius: 12px;
+}
+
+.blur {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(44, 44, 44, 0.9);
+    backdrop-filter: blur(2px);
+    box-shadow: 0 2px 8px rgba(68, 68, 68, 1);
+    z-index: 5;
 }
 
 .accommodation {
