--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,7 +2,60 @@
 
 {% block content %}
 
-<h1>Home</h1>
-<p>check out the listings!</p>
+<div class="section">
+    <div class="container">
+        <div class="hero">
+            <div class="hero-header">
+                <h1>ARCBNB</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                </p>
+                <a class="btn" href="{% url 'index' %}">Explore Listings</a>
+            </div>
+            <div class="hero-img">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="section">
+    <div class="container">
+        <h1>Builds with refreshing pools</h1>
+        <div id="grid-hide" class="listing-grid">
+            {% for listing in listings %}
+                {% for feature in listing.features.all %}
+                    {% if feature.name == 'Pool' %}
+                        <a href="{% url 'detail' listing.id %}">
+                            <div class="listing-tile">
+                                <img src="{{ listing.main_img }}" alt="">
+                                <h3>{{ listing.name }}</h3>
+                            </div>
+                        </a>
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+         </div>
+    </div>
+</div>
+<div class="section">
+    <div class="container">
+        <h1>Places you can host your parties, weddings, etc.</h1>
+        <div id="grid-hide" class="listing-grid">
+            {% for listing in listings %}
+                {% for feature in listing.features.all %}
+                    {% if feature.name == 'Host Events' %}
+                        <a href="{% url 'detail' listing.id %}">
+                            <div class="listing-tile">
+                                <img src="{{ listing.main_img }}" alt="">
+                                <h3>{{ listing.name }}</h3>
+                            </div>
+                        </a>
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+         </div>
+         <br>
+         <br>
+    </div>
+</div>
 
 {% endblock %}
