--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,9 +6,9 @@
     <div class="container">
         <div class="hero">
             <div class="hero-header">
-                <h1>ARCBNB</h1>
+                <h1>Experience Architecture</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Stay in one of the architectural marvels of Los Angeles
                 </p>
                 <a class="btn" href="{% url 'index' %}">Explore Listings</a>
             </div>
